feat: show user label
